--- a/filebeat/module/nginx/_meta/kibana/7/dashboard/Filebeat-nginx-overview.json
+++ b/filebeat/module/nginx/_meta/kibana/7/dashboard/Filebeat-nginx-overview.json
@@ -41,9 +41,9 @@
                             "enabled": true,
                             "id": "3",
                             "params": {
-                                "field": "nginx.access.user_agent.major",
-                                "order": "desc",
-                                "orderBy": "1",
+                                "field": "user_agent.version", 
+                                "order": "desc", 
+                                "orderBy": "1", 
                                 "size": 5
                             },
                             "schema": "segment",
@@ -107,9 +107,9 @@
                             "enabled": true,
                             "id": "3",
                             "params": {
-                                "field": "nginx.access.user_agent.os_major",
-                                "order": "desc",
-                                "orderBy": "1",
+                                "field": "user_agent.os.version", 
+                                "order": "desc", 
+                                "orderBy": "1", 
                                 "size": 5
                             },
                             "schema": "segment",
