--- a/metricbeat/module/docker/memory/_meta/fields.yml
+++ b/metricbeat/module/docker/memory/_meta/fields.yml
@@ -49,3 +49,20 @@
           format: bytes
           description: >
             Total memory usage.
+    - name: windows
+      type: group
+      description: >
+        Windows memory statistics 
+      fields:
+        - name: commit
+          type: long
+          description: >
+            Committed bytes
+        - name: commit_peak
+          type: long
+          description: >
+            Peak committed bytes
+        - name: private_working_set
+          type: long
+          description: >
+            private working set
