--- a/x-pack/filebeat/module/shorewall/_meta/fields.yml
+++ b/x-pack/filebeat/module/shorewall/_meta/fields.yml
@@ -7,5 +7,13 @@
       type: group
       description: >
       fields:
+        - name: nf_dst_port
+          type: integer
+        - name: nf_id
+          type: integer
+        - name: nf_len
+          type: integer
         - name: nf_src_port
+          type: integer
+        - name: nf_ttl
           type: integer
