--- a/x-pack/filebeat/module/shorewall/_meta/fields.yml
+++ b/x-pack/filebeat/module/shorewall/_meta/fields.yml
@@ -8,3 +8,29 @@
       description: >
         Fields from Shorewall logs.
       fields:
+        - name: network
+          type: group
+          description: >
+            Shorewal log files
+          fields:
+            - name: in
+              type: keywork
+            - name: out
+              type: keyword
+        - name: action
+          type: group
+          description: >
+            Shorewal network log files
+          fields:
+            - name: one
+              type: keywork
+              description: >
+                Action one
+            - name: two
+              type: keyword
+              description: >
+                Action two
+        - name: precedence
+          type: keyword
+        - name: ttl
+          type: integer
